독서기록장 검색한 책 클릭 시 상세페이지 구현

--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -83,6 +83,11 @@ input {
 	margin-top: 17%;
 }
 
+.searchBookList a{
+	text-decoration:none;
+}
+
+
 .searchBookItem {
   width: 100%;
   height: 10%;
